add legend to map

--- a/src/components/Municipality/MunicipalityIntro/style.module.less
+++ b/src/components/Municipality/MunicipalityIntro/style.module.less
@@ -16,11 +16,11 @@
 
 .mapContainer {
   // TODO: check vh
-  height: 90vh;
-  padding: 2rem 1rem 2rem 2rem;
+  height: 80vh;
+  margin: 2rem 1rem 2rem 2rem;
   @media (max-width: @breakPointL) {
     height: 60vh;
-    padding: 0rem;
+    margin: 1rem 0 0 0;
   }
 }
 
