Profile design red

--- a/src/components/Profile/ProfileOverview/style.module.less
+++ b/src/components/Profile/ProfileOverview/style.module.less
@@ -2,14 +2,16 @@
 
 .profilePageSection {
   position: relative;
-  background-color: @greyMedium;
+  background-color: @red;
+  color: @white;
   padding: 3.3rem 4rem;
   text-decoration: none;
 
   &:hover,
   &:active,
   &:focus {
-    background-color: @white;
+    background-color: @yellow;
+    color: @red;
   }
 
   @media (max-width: @breakPointS) {
