--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -5,6 +5,7 @@
 
 .newsletterCard {
   background-color: white;
+  color: @red;
   padding: 0.5em 1.5em 0.5em 1.5em;
   border-radius: 15px;
   margin-bottom: 1em;
@@ -37,4 +38,8 @@
 
 .cancelRevokeProcess {
   padding-top: 2.5em;
+}
+
+.searchPlaces {
+  color: @red;
 }
