--- a/src/components/Profile/PersonalSettings/style.module.less
+++ b/src/components/Profile/PersonalSettings/style.module.less
@@ -58,6 +58,14 @@
 }
 
 .mobileBtn {
+  border: @white solid 1px;
+  color: @white;
+
+  &:hover {
+    background-color: @white;
+    color: @red;
+  }
+
   @media (max-width: @breakPointM) {
     margin-top: 1em;
   }
