--- a/src/pages/ticker/style.module.less
+++ b/src/pages/ticker/style.module.less
@@ -2,142 +2,48 @@
 
 .contentContainer {
   max-width: 50rem;
-  margin: auto;
-  padding: 2rem;
   background-color: @red;
   color: @white;
 
-  min-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 8rem;
+  margin-bottom: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 5rem;
+  padding-bottom: 4rem;
+}
+
+.App {
+  font-family: sans-serif;
+  font-size: 4em;
+}
+
+.counterContainer {
+  margin-bottom: 3rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.flip-clock {
-  text-align: center;
-  perspective: 400px;
-  margin: 20px auto;
-
-  *,
-  *:before,
-  *:after {
-    box-sizing: border-box;
-  }
+.counterLabel {
+  font-size: 2.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 0;
 }
 
-.flip-clock__piece {
-  display: inline-block;
-  margin: 0 5px;
+.alignRight {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.flip-clock__slot {
-  font-size: 2vw;
-}
+.CTA {
+  color: @white;
+  border: 1px solid @white;
 
-@halfHeight: 0.72em;
-@borderRadius: 0.15em;
-
-.card {
-  display: block;
-  position: relative;
-  padding-bottom: @halfHeight;
-  font-size: 9vw;
-  line-height: 0.95;
-}
-
-.card__top,
-.card__bottom,
-.card__back::before,
-.card__back::after {
-  display: block;
-  height: @halfHeight;
-  color: #ccc;
-  background: #222;
-  padding: 0.25em 0.25em;
-  border-radius: @borderRadius @borderRadius 0 0;
-  backface-visiblity: hidden;
-  transform-style: preserve-3d;
-  width: 1.8em;
-  transform: translateZ(0);
-}
-
-.card__bottom {
-  color: #fff;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  border-top: solid 1px #000;
-  background: #393939;
-  border-radius: 0 0 @borderRadius @borderRadius;
-  pointer-events: none;
-  overflow: hidden;
-}
-
-.card__bottom::after {
-  display: block;
-  margin-top: -@halfHeight;
-}
-
-.card__back::before,
-.card__bottom::after {
-  content: attr(data-value);
-}
-
-.card__back {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  left: 0%;
-  pointer-events: none;
-}
-
-.card__back::before {
-  position: relative;
-  z-index: -1;
-  overflow: hidden;
-}
-
-.flip .card__back::before {
-  animation: flipTop 0.3s cubic-bezier(0.37, 0.01, 0.94, 0.35);
-  animation-fill-mode: both;
-  transform-origin: center bottom;
-}
-
-.flip .card__back .card__bottom {
-  transform-origin: center top;
-  animation-fill-mode: both;
-  animation: flipBottom 0.6s cubic-bezier(0.15, 0.45, 0.28, 1); // 0.3s;
-}
-
-@keyframes flipTop {
-  0% {
-    transform: rotateX(0deg);
-    z-index: 2;
-  }
-  0%,
-  99% {
-    opacity: 0.99;
-  }
-  100% {
-    transform: rotateX(-90deg);
-    opacity: 0;
-  }
-}
-
-@keyframes flipBottom {
-  0%,
-  50% {
-    z-index: -1;
-    transform: rotateX(90deg);
-    opacity: 0;
-  }
-  51% {
-    opacity: 0.99;
-  }
-  100% {
-    opacity: 0.99;
-    transform: rotateX(0deg);
-    z-index: 5;
+  &:hover {
+    background-color: @white;
+    color: @red;
   }
 }
