--- a/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
@@ -3,12 +3,23 @@
 
 .tooltipContainer {
   position: absolute;
-  min-width: 200px;
+  min-width: 240px;
   width: 60%;
+  @media (max-width: @breakPointM) {
+    width: 40%;
+  }
+  max-width: 350px;
   pointer-events: none;
   padding: 1.5rem;
-  z-index: 1;
+  z-index: 3;
   border: 2px solid #fff;
+  transform: translateX(-50%) translateY(5px);
+  -ms-user-select:none;
+  -moz-user-select:none;
+  -webkit-user-select:none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  user-select:none;
 }
 
 .tooltipHeader {
