--- a/src/pages/ticker/style.module.less
+++ b/src/pages/ticker/style.module.less
@@ -8,16 +8,24 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 8rem;
-  margin-bottom: 5rem;
+  margin-bottom: -4rem;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 5rem;
   padding-bottom: 4rem;
 }
 
+.counterContainerReel {
+  display: block;
+}
+
 .App {
   font-family: sans-serif;
-  font-size: 4em;
+  font-size: 4rem;
+
+  @media (max-width: @breakPointM) {
+    font-size: 1.5rem;
+  }
 }
 
 .counterContainer {
@@ -31,6 +39,45 @@
   margin-right: 1rem;
   margin-top: 3rem;
   margin-bottom: 0;
+
+  @media (max-width: @breakPointS) {
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+  }
+}
+
+.counterLabelSecond {
+  font-size: 2.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 1.45rem;
+  margin-bottom: 0;
+
+  @media (max-width: @breakPointS) {
+    font-size: 1.5rem;
+    margin-top: 0rem;
+  }
+}
+
+.counterLabelThird {
+  font-size: 2.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 2.3rem;
+  margin-bottom: 0;
+
+  @media (max-width: @breakPointS) {
+    font-size: 1.5rem;
+    margin-top: 0.65rem;
+  }
+}
+
+.upperCounter {
+  min-width: 10rem;
+
+  @media (max-width: @breakPointS) {
+    min-width: 3.5rem;
+  }
 }
 
 .alignRight {
@@ -46,4 +93,8 @@
     background-color: @white;
     color: @red;
   }
+}
+
+.countUpLibNum {
+  color: #00c8f0;
 }
