--- a/src/pages/ticker/style.module.less
+++ b/src/pages/ticker/style.module.less
@@ -13,13 +13,27 @@
   padding-right: 2rem;
   padding-top: 5rem;
   padding-bottom: 4rem;
+
+  @media (max-width: @breakPointS) {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
 }
 
 .counterContainerReel {
   display: block;
 }
 
-.App {
+.counterContainer {
+  margin-bottom: 3rem;
+  display: flex;
+
+  @media (max-width: @breakPointS) {
+    margin-bottom: 2rem;
+  }
+}
+
+.slotMachine {
   font-family: sans-serif;
   font-size: 4rem;
 
@@ -28,52 +42,87 @@
   }
 }
 
-.counterContainer {
-  margin-bottom: 3rem;
-  display: flex;
+.counterLabelSlotMachine {
+  font-size: 2.5rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-top: 2.75rem;
+  margin-bottom: 0;
+
+  @media (max-width: @breakPointS) {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+    margin-top: 1rem;
+  }
 }
 
-.counterLabel {
+.flipClock {
+  font-family: sans-serif;
+  font-size: 4rem;
+
+  @media (max-width: @breakPointM) {
+    font-size: 2.5rem;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: 2rem;
+  }
+}
+
+.counterLabelFlipClock {
   font-size: 2.5rem;
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 3rem;
   margin-bottom: 0;
 
+  @media (max-width: @breakPointM) {
+    font-size: 2rem;
+    margin-top: 1.75rem;
+  }
+
   @media (max-width: @breakPointS) {
     font-size: 1.5rem;
-    margin-top: 0.5rem;
+    margin-top: 1.25rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
 }
 
-.counterLabelSecond {
-  font-size: 2.5rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 1.45rem;
-  margin-bottom: 0;
+.simpleCounter {
+  font-family: sans-serif;
+  font-size: 5rem;
 
-  @media (max-width: @breakPointS) {
-    font-size: 1.5rem;
-    margin-top: 0rem;
+  @media (max-width: @breakPointM) {
+    font-size: 3rem;
   }
 }
 
-.counterLabelThird {
+.counterLabelSimpleCounter {
   font-size: 2.5rem;
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-top: 2.3rem;
+  margin-top: 2.25rem;
   margin-bottom: 0;
+
+  @media (max-width: @breakPointM) {
+    font-size: 1.5rem;
+    margin-top: 1.25rem;
+  }
 
   @media (max-width: @breakPointS) {
     font-size: 1.5rem;
-    margin-top: 0.65rem;
+    margin-top: 1.25rem;
   }
 }
 
 .upperCounter {
-  min-width: 10rem;
+  min-width: 12rem;
+
+  @media (max-width: @breakPointM) {
+    min-width: 8rem;
+  }
 
   @media (max-width: @breakPointS) {
     min-width: 3.5rem;
@@ -92,6 +141,18 @@
   &:hover {
     background-color: @white;
     color: @red;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: 1rem;
+    border-radius: 15px;
+  }
+}
+
+.actionText {
+  @media (max-width: @breakPointS) {
+    font-size: 1.5rem;
+    line-height: 1.5;
   }
 }
 
