--- a/src/pages/ticker/style.module.less
+++ b/src/pages/ticker/style.module.less
@@ -159,3 +159,17 @@
 .countUpLibNum {
   color: #00c8f0;
 }
+
+.versionLabel {
+  margin: 0;
+  margin-top: 1.5rem;
+  float: right;
+  font-size: 12px;
+
+  @media (max-width: @breakPointS) {
+    margin-right: 0.25rem;
+  }
+}
+.versionText {
+  font-size: 18px;
+}
