--- a/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
@@ -26,6 +26,9 @@
   // margin-top: 0.75rem;
   margin-bottom: 0.75rem;
   font-size: @fontSizeM;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .tooltipMunicipality {
   .linkUnderlined()
