Snackbar first Draft

--- a/src/components/Profile/PersonalSettings/style.module.less
+++ b/src/components/Profile/PersonalSettings/style.module.less
@@ -82,3 +82,14 @@
 .inputWide {
   width: 100%;
 }
+
+.revokeButton {
+  margin: 0.5rem;
+}
+
+.revokeButtonRow {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+}
