Implementing SelfScan into User Profile

--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -81,3 +81,32 @@
     margin-top: 2rem;
   }
 }
+
+.signatureSection {
+  background-color: @red !important;
+  color: @white !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.campaignVisualisations {
+  background-color: @yellow;
+  color: @red;
+  padding: 1.5rem;
+}
+
+.fieldContainer {
+  width: 75%;
+}
+
+.fieldLabel {
+  min-height: 3rem;
+
+  @media (max-width: @breakPointM) {
+    font-size: 18px;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: 15px;
+  }
+}
