--- a/src/components/Profile/ProfileSignatures/style.module.less
+++ b/src/components/Profile/ProfileSignatures/style.module.less
@@ -5,3 +5,12 @@
   --bg-color: none;
   padding: 0;
 }
+
+.customStyle {
+  --bg-color: @red;
+  background-color: @red;
+  color: @grey;
+  & input:checked {
+    color: @red;
+  }
+}
