--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -8,7 +8,7 @@
   color: @red;
   padding: 0.5em 1.5em 0.5em 1.5em;
   border-radius: 15px;
-  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 .newsletterCardHeading {
