--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -46,9 +46,11 @@
   padding: 0.5rem 1.25rem;
   color: @red;
 
-  &:hover {
+  &:hover, &:focus, &.active {
     background-color: @greyBright;
+    outline: none;
   }
+
 }
 
 .noSuggestionsItem {
