--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -1,10 +1,10 @@
 @import '../style/vars.less';
 
 .container {
-  --bg-color: @yellow;
+  --bg-color: @white;
   --font-color: @red;
   --secondary-color: @blueBright;
-  --text-on-secondary-color: @yellow;
+  --text-on-secondary-color: @white;
   position: fixed;
   top: 0;
   left: 0;
