--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -14,7 +14,7 @@ body {
   --bg-color: @grey;
   --font-color: @red;
   --font-color-secondary: @blueBright;
-  --secondary-color: @yellow;
+  --secondary-color: @white;
   --text-on-secondary-color: @red;
   --grid-gap: 1rem;
 
