--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -1,5 +1,5 @@
-@red: #fc484c;
-@blueBright: #22c8ee;
+@red: #ff4664;
+@blueBright: #46b4b4;
 @blueDark: #3423f6;
 @rose: #e5b5c8;
 @pink: #7d69f6;
@@ -92,7 +92,7 @@
       transparent 2px,
       transparent 10rem
     ),
-    @yellow;
+    @white;
 }
 
 .menuLink() {
