--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -26,6 +26,11 @@
 @headerHeight: 5rem;
 @headerHeightS: 4rem;
 
+@headerWidth: 70rem;
+
+@donationBarHeight: 5rem;
+@donationBarHeightS: 4rem;
+
 @contentWidth: 45rem;
 @contentWidthL: 70rem;
 
