--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -1,17 +1,30 @@
 @import '../../style/vars.less';
 
 .header {
-  .headerFooterGrid();
   z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   background: @white;
-  grid-template-rows: @headerHeight;
+  width: 100%;
+}
+
+.headerItemContainer {
+  display: flex;
+  justify-content: space-between;
+  width: @headerWidth;
+  height: @headerHeight;
+  margin: auto;
+  padding-right: 2rem;
+  padding-left: 2rem;
+
+  @media (max-width: @breakPointXL) {
+    width: 100%;
+  }
 
   @media (max-width: @breakPointS) {
-    grid-template-rows: @headerHeightS;
+    height: @headerHeightS;
   }
 }
 
@@ -77,7 +90,7 @@
 }
 
 .menuButtonBar {
-  background: @red;
+  background: #000000;
   height: 0.3rem;
 }
 
