add MunicipalityContext and Contentful show elelements logic

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -1,5 +1,7 @@
 @import '../../style/vars.less';
 
+
+
 .sections .section {
   position: relative;
   overflow: hidden;
@@ -526,4 +528,17 @@
 .sectionVideo {
   background-color: @red !important;
   color: @greyBright !important;
+}
+
+.keyVisual {
+  // TODO: Position and size
+  position: relative;
+  margin-bottom: -2rem;
+  width: 50%;
+  height: 300px;
+  z-index: 1;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../../../assets/keyvisual/key-visual.svg);
 }
