TickerToSignup implementation started

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -1,7 +1,5 @@
 @import '../../style/vars.less';
 
-
-
 .sections .section {
   position: relative;
   overflow: hidden;
@@ -514,12 +512,17 @@
 .keyVisual {
   // TODO: Position and size
   position: relative;
-  margin-bottom: -2rem;
-  width: 50%;
-  height: 300px;
+  margin-bottom: -3.5rem;
+  margin-top: 8rem;
+  width: 67.5%;
+  height: 400px;
   z-index: 1;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../../../assets/keyvisual/key-visual.svg);
+}
+
+.componentWrapper {
+  background-color: @pink;
 }
