--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -47,27 +47,8 @@
 }
 
 .contentGrid() {
-  display: grid;
-  grid-template-columns:
-    [wide-start] 1fr [medium-start] 1fr [slim-start] repeat(8, 1fr)
-    [slim-end] 1fr [medium-end] 1fr [wide-end];
-  grid-gap: var(--grid-gap);
-
-  @media (max-width: @breakPointXL) {
-    grid-template-columns:
-      [wide-start] 1fr [medium-start] 1fr [slim-start] 1fr repeat(6, 1fr)
-      1fr [slim-end] 1fr [medium-end] 1fr [wide-end];
-  }
-
-  @media (max-width: @breakPointM) {
-    grid-template-columns:
-      [wide-start medium-start] 1fr [slim-start] repeat(8, 1fr)
-      [slim-end] 1fr [wide-end medium-end];
-  }
-
-  @media (max-width: @breakPointS) {
-    grid-template-columns: [wide-start slim-start medium-start] repeat(8, 1fr) [wide-end medium-end slim-end];
-  }
+  width: @headerWidth;
+  margin: auto;
 }
 
 .contentGridWide() {
