Components wrapped in flexbox

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -499,3 +499,15 @@
 .componentWrapper {
   background-color: @pink;
 }
+
+.componentElementContainer {
+  max-width: @headerWidth;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.componentElement {
+  width: 47.5%;
+}
