Flexbox TickerToSignup and Map

--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -1,3 +1,5 @@
+@import '../../../components/style/vars.less';
+
 .react-reel__group {
   transition-delay: 0ms;
   transition-timing-function: ease-in-out;
@@ -17,8 +19,8 @@
   /** CUSTOMISE BELOW */
   font-size: 90px;
   font-weight: 600;
-  color: #00c8f0;
-  border-bottom: 2px solid #fff56e;
+  color: @blueBright;
+  border-bottom: 2px solid @red;
   line-height: 0.95em; /* adjusted for Lato font */
 }
 
@@ -26,8 +28,8 @@
   .react-reel__reel {
     font-size: 40px;
     font-weight: 600;
-    color: #00c8f0;
-    border-bottom: 2px solid #fff56e;
+    color: @blueBright;
+    border-bottom: 2px solid @red;
     line-height: 0.95em; /* adjusted for Lato font */
   }
 }
