--- a/src/components/Municipality/MunicipalityIntro/style.module.less
+++ b/src/components/Municipality/MunicipalityIntro/style.module.less
@@ -1,11 +1,11 @@
 @import '../../style/vars.less';
 
 .mapSection {
-  --bg-color: @pink;
+  --bg-color: @violet;
   --font-color: @greyBright;
   --secondary-color: @red;
   --text-on-secondary-color: @greyBright;
-  background-color: @pink;
+  background-color: @violet;
   color: @greyBright;
   padding: 0rem var(--grid-gap) 10rem;
 }
@@ -30,7 +30,6 @@
     padding: 1rem 0 0;
     .contentGrid();
   }
-  
 
   // grid-column: slim-start / slim-end;
 }
@@ -60,8 +59,6 @@
   .contentGrid();
   max-width: 70rem;
 }
-
-
 
 .adjustFinallyMessage {
   padding-top: 1rem;
