--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -1,7 +1,7 @@
 @import '../../../components/style/vars.less';
 
 .contentContainer {
-  background-color: @pink;
+  background-color: @violet;
   color: @white;
   margin: auto;
 }
