--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -3,10 +3,14 @@
 .sections .section {
   position: relative;
   overflow: hidden;
-  padding: 5rem var(--grid-gap) 10rem;
+  padding: 5rem 3rem 8rem 3rem;
 
   @media (max-width: @breakPointM) {
-    padding: 3rem 1rem 5rem;
+    padding: 3rem 2rem 5rem 2rem;
+  }
+
+  @media (max-width: @breakPointS) {
+    padding: 3rem 1rem 5rem 1rem;
   }
 
   &.sectionNewsletter {
@@ -14,23 +18,20 @@
   }
 
   // COLOR SCHEMES
-  /* Allows editors in contentful to override the default colors.
-  /* We have to use !important to overwrite */
-  /* the rules set with nth-child */
 
   &.sectionWhite {
     background-color: @white;
-    color: @pink;
+    color: @violet;
     --bg-color: @white;
-    --font-color: @pink;
+    --font-color: @violet;
     --secondary-color: @blueBright;
     --text-on-secondary-color: @red;
   }
 
-  &.sectionPink {
-    background-color: @pink;
+  &.sectionViolet {
+    background-color: @violet;
     color: @greyBright;
-    --bg-color: @pink;
+    --bg-color: @violet;
     --font-color: @greyBright;
     --secondary-color: @red;
     --text-on-secondary-color: @grey;
@@ -50,7 +51,7 @@
     color: @greyBright;
     --bg-color: @red;
     --font-color: @greyBright;
-    --secondary-color: @pink;
+    --secondary-color: @violet;
     --text-on-secondary-color: @white;
   }
 
@@ -215,8 +216,7 @@
 }
 
 .sectionBody {
-  max-width: @contentWidthL;
-  .contentGrid();
+  max-width: @headerWidth;
   margin: 0 auto;
 
   .sectionHeader & {
@@ -494,10 +494,41 @@
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../../../assets/keyvisual/key-visual.svg);
+
+  @media (max-width: @breakPointL) {
+    width: 100%;
+    height: 500px;
+    margin-top: 7rem;
+    margin-bottom: -5rem;
+  }
+
+  @media (max-width: @breakPointM) {
+    width: 100%;
+    height: 400px;
+    margin-top: 6rem;
+    margin-bottom: -5.5rem;
+  }
+
+  @media (max-width: @breakPointS) {
+    width: 100%;
+    height: 200px;
+    margin-top: 5rem;
+    margin-bottom: -2rem;
+  }
+
+  @media (max-width: 300px) {
+    margin-top: 3rem;
+    margin-bottom: -3rem;
+  }
+
+  @media (max-width: 220px) {
+    margin-top: 3rem;
+    margin-bottom: -5rem;
+  }
 }
 
 .componentWrapper {
-  background-color: @pink;
+  background-color: @violet;
 }
 
 .componentElementContainer {
@@ -506,8 +537,15 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-top: 2rem;
 }
 
 .componentElement {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   width: 47.5%;
+
+  @media (max-width: @breakPointL) {
+    width: 100%;
+  }
 }
