Profile Signatures minifix

--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -47,11 +47,8 @@
 }
 
 .statisticsOverall {
-  grid-column: wide-start / 5;
-  line-height: 1;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 1rem;
+  display: flex;
+  justify-content: space-between;
 
   @media (max-width: @breakPointM) {
     grid-column: wide-start / wide-end;
@@ -82,15 +79,8 @@
   }
 }
 
-.signatureSection {
-  background-color: @red !important;
-  color: @white !important;
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
 .campaignVisualisations {
-  background-color: @yellow;
+  background-color: @white;
   color: @red;
   padding: 1.5rem;
 }
