--- a/src/components/SignatureStats/style.module.less
+++ b/src/components/SignatureStats/style.module.less
@@ -3,13 +3,15 @@
 .statisticsCountItem {
   padding-right: 4rem;
   max-width: 20rem;
+  min-width: 50%;
+  margin-bottom: 4rem;
 
   &:last-of-type {
     margin-bottom: 0rem;
   }
 
-  @media (max-width: @breakPointS) {
-    margin-bottom: 2rem;
+  @media (max-width: @breakPointM) {
+    margin-bottom: 3rem;
   }
 }
 
