--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -5,7 +5,7 @@
 .textInputInline,
 .textarea {
   background: @white;
-  border: none;
+  border: 2px solid @red;
   color: @red;
   font-family: inherit;
   border-radius: 0;
@@ -20,7 +20,7 @@
   }
 
   &::placeholder {
-    color: @grey;
+    color: @greyMedium;
   }
 
   &:focus {
