--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
-  font-weight: bold;
+  font-weight: 500;
   background: @grey;
   margin: 0;
   color: @red;
