--- a/src/components/style/webfont.less
+++ b/src/components/style/webfont.less
@@ -27,23 +27,33 @@
 @font-face {
   font-family: 'Ideal';
   font-weight: normal;
-  src: url('../../../webfonts/3AD95C_0_0.eot');
-  src: url('../../../webfonts/3AD95C_0_0.eot?#iefix')
+  src: url('../../../webfonts/ideal-regular.eot');
+  src: url('../../../webfonts/ideal-regular.eot?#iefix')
       format('embedded-opentype'),
-    url('../../../webfonts/3AD95C_0_0.woff2') format('woff2'),
-    url('../../../webfonts/3AD95C_0_0.woff') format('woff'),
-    url('../../../webfonts/3AD95C_0_0.ttf') format('truetype');
+    url('../../../webfonts/ideal-regular.woff2') format('woff2'),
+    url('../../../webfonts/ideal-regular.woff') format('woff'),
+    url('../../../webfonts/ideal-regular.ttf') format('truetype');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Ideal';
+  font-weight: 500 600;
+  src: url('../../../webfonts/ideal-medium.otf');
+  src: url('../../../webfonts/ideal-medium.otf?#iefix') format('otf'),
+    url('../../../webfonts/ideal-medium.woff2') format('woff2'),
+    url('../../../webfonts/ideal-medium.woff') format('woff');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Ideal';
   font-weight: bold;
-  src: url('../../../webfonts/3AD95C_1_0.eot');
-  src: url('../../../webfonts/3AD95C_1_0.eot?#iefix')
+  src: url('../../../webfonts/ideal-bold.eot');
+  src: url('../../../webfonts/ideal-bold.eot?#iefix')
       format('embedded-opentype'),
-    url('../../../webfonts/3AD95C_1_0.woff2') format('woff2'),
-    url('../../../webfonts/3AD95C_1_0.woff') format('woff'),
-    url('../../../webfonts/3AD95C_1_0.ttf') format('truetype');
+    url('../../../webfonts/ideal-bold.woff2') format('woff2'),
+    url('../../../webfonts/ideal-bold.woff') format('woff'),
+    url('../../../webfonts/ideal-bold.ttf') format('truetype');
   font-display: swap;
 }
