Changed h1s to h2s for SEO reasons

--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -57,6 +57,7 @@
 
 .actionTextBig {
   font-size: 2.25rem;
+  letter-spacing: 0.04px;
   @media (max-width: @breakPointS) {
     font-size: 2rem;
     line-height: 1.5;
